--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "update_types": "npx openapi-typescript https://lnpalhbwuvhsmgchvpth.supabase.co/rest/v1/?apikey=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJvbGUiOiJhbm9uIiwiaWF0IjoxNjQyNzM2NjE0LCJleHAiOjE5NTgzMTI2MTR9.QImWgV42Yds0-fsuN79Nwua8wVeAKgeE0VCwER5PVdM --output types/supabase.ts"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.29.3",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -14,6 +16,7 @@
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
+    "openapi-typescript": "^5.1.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
